@@ -14,34 +14,34 @@ not run its Makefile.PL or Build.PL.
 -----BEGIN PGP SIGNED MESSAGE-----
 
 SHA1 21e6d61fb0134d6e9909c464cd5894083b1f32c7 BUGS
-SHA1 881646c1b6a13a1478e287cfdb03ba17c7b4ef8b CHANGES
+SHA1 78ad2b2411c7d54adf29bc9bdfd101713939c61a CHANGES
 SHA1 45554f2da419f19f59014dab3489f34a45072279 INSTALL
 SHA1 d6a6c30ee6d9ba6b9afab8bbf6a25e1b23c744e0 LICENSE
 SHA1 c6fe5b7172237e24baaecc4615f1141aa8e1c00c MANIFEST
-SHA1 c69825ade20b10e1a27bf5f7b0bcf8b240b9e410 META.yml
-SHA1 8f1aa206c5ded01b74258ba24f100e1ad5115f7e Makefile.PL
-SHA1 a156880dc3f927c708cf3f4e4e71ba9598ab972d NEW
+SHA1 09962df7ae66715b3aac43c0fd582d7745a14c40 META.yml
+SHA1 0c004007310bbace10fa4fb2ae8050d932d73bc8 Makefile.PL
+SHA1 ec7e05dbc84b3acc7aa671f735d189c4525846f5 NEW
 SHA1 e4ce2ac6577dd4f9c1bd869fe79b575f56afa578 README
 SHA1 e1690c1c103d9a76cf7e480566c9989183f84a1c TODO
-SHA1 c1f785556151c20bc122121cc50e1ffbf1054777 lib/Math/BigRat.pm
+SHA1 fad37f3783a6a796fb0022d6a1b246f82f3a4c35 lib/Math/BigRat.pm
 SHA1 10a4e077d8b5c267fdde22be32619d9d23bded3b t/Math/BigRat/Test.pm
 SHA1 aa8ee80ffa9174294604ac6246fdbe082738e9ac t/big_ap.t
 SHA1 ac4cf26e869179307a83ba76d40de40b0eeb0f4d t/bigfltpm.inc
 SHA1 cd8da7ad4459ec3e68af80fd145bb8c90bf9a8ea t/bigfltrt.t
 SHA1 2cc6326101f48c3631cb6b28da3f6927391c2b0b t/bigrat.t
 SHA1 95b56d11e493aca96123854a02660b090f1399a5 t/bigratpm.inc
-SHA1 571f06ad70bbac94ddbc553bf31c7dcdf1c2f199 t/bigratpm.t
+SHA1 b60756f4b566888e55b34cf5e7b11a4f376e0854 t/bigratpm.t
 SHA1 3408180abd05091eafda8e46b8275ac3581d99ed t/bigratup.t
-SHA1 c0e79e2b2865a15fd3610a23cc1b24f61164dee7 t/requirer.t
+SHA1 f9ca8eb694e22414ce7571ad046bf92fca122306 t/requirer.t
 SHA1 ab00cdfe98f95fd5434e95fe8a86a013b3ad773f t/trap.t
 -----BEGIN PGP SIGNATURE-----
 Version: GnuPG v1.2.4 (GNU/Linux)
 
-iQEVAwUBQdbBiHcLPEOTuEwVAQG95gf/RhAmyfWtbM3hpjf2/lvRJp7AIqgWNKQu
-pmee6gQjyXnfnT65Jl4OdrsjAPq36K98rjZm3t9FJMALZOiOyCufCyaVw30HzB3L
-iwfjadWcPIwBeJfaKwGqYWcCGusgIe4+2OMu0bIWTS0L10DDwLRkaNI/IGCLxDIt
-hZwvdYWiuPvWEk8ilbFcTz9gGgYD/LiqbNr5mpqgrMqyrta0/4NPmkEQBRwvWayA
-f1Pjhx+7K0KS/cZDNU5X8rO4c9cbCDf+SezhpTfl7XLz+A7WMYgf8hgmJYYtdErn
-SrclaWHr+CVMRAPgA3oHC63WqbV61qXk0Q4f6uG7MZs67QP4BRe1qg==
-=/ps+
+iQEVAwUBQk+riXcLPEOTuEwVAQH6Cgf/VZJsAWV7J6iRSeXfgLNMWUoD9V8aJNkg
+SVgisl9QOsHTYVvMDnXeWV9C2r5eajkKXqESDHfIUbcW5bMVo/QUi9yWhARoSgni
+CIxOjLRMfSRbZTdrfTEgPqE+FffF3v5TUJBd5v7c24ZvXSe22X1xDU4pioMfs+N2
+wLcKhBkF5+tXsxcXUJBSt0EFhOxgRGZWC/hoQRQ2vReGdiwi89UpK0l6fe5lasS+
+IYgO/KKf3hx7u1lCwc6fCRrGYqkEPLbMLwF6JkxUybgld7tyMlEMNjPbCNLgmsjL
+6KLpW4dWLNcx1Wy/GdMuJEIB1avngfUQTLaowEOfNDeKJPVOKjbGUw==
+=7yPs
 -----END PGP SIGNATURE-----
